refactor: migrate search service logic from Node.js to MarkhorAiServiceImpl and remove legacy search files