@@ -3,360 +3,175 @@ package com.cooked.backend.service.impl;
 import com.cooked.backend.dto.request.AiRecipeGenerationRequest;
 import com.cooked.backend.dto.request.CreateRecipeRequest;
 import com.cooked.backend.dto.response.AiIngredientDetectionResponse;
+import com.cooked.backend.dto.response.ScanResponse;
 import com.cooked.backend.entity.User;
 import com.cooked.backend.exception.BadRequestException;
 import com.cooked.backend.repository.UserRepository;
 import com.cooked.backend.service.AiService;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Primary;
-import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
-import lombok.extern.slf4j.Slf4j;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
 
-import java.io.IOException;
-import java.util.List;
-import java.util.Map;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 @Service
 @Primary
 @Slf4j
+@RequiredArgsConstructor
 public class MarkhorAiServiceImpl implements AiService {
 
     private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper;
     private final UserRepository userRepository;
-    private final com.cooked.backend.repository.RecipeDataRepository recipeDataRepository;
-    private final AiService legacyAiService;
 
-    public MarkhorAiServiceImpl(
-            RestTemplate restTemplate,
-            ObjectMapper objectMapper,
-            UserRepository userRepository,
-            com.cooked.backend.repository.RecipeDataRepository recipeDataRepository,
-            @Qualifier("aiServiceImpl") AiService legacyAiService) {
-        this.restTemplate = restTemplate;
-        this.objectMapper = objectMapper;
-        this.userRepository = userRepository;
-        this.recipeDataRepository = recipeDataRepository;
-        this.legacyAiService = legacyAiService;
-    }
+    private final com.cooked.backend.repository.RecipeDataRepository recipeDataRepository;
 
     @Value("${AI_API_BASE_URL:https://recipe.markhorsystems.com}")
     private String baseUrl;
 
     @Override
-    public CreateRecipeRequest extractRecipeFromLink(String url, String email) {
+    public List<Map<String, String>> searchWeb(String query) {
         try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
+            log.info("Native Search for: {}", query);
+            String q = query.toLowerCase().contains("recipe") ? query : query + " recipe";
+            String url = "https://html.duckduckgo.com/html/?q=" + URLEncoder.encode(q, StandardCharsets.UTF_8);
 
-            Map<String, String> body = Map.of("url", url);
-            HttpEntity<Map<String, String>> requestEntity = new HttpEntity<>(body, headers);
+            Document doc = Jsoup.connect(url)
+                    .userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36")
+                    .timeout(10000)
+                    .get();
 
-            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
-                    baseUrl + "/api/extract",
-                    HttpMethod.POST,
-                    requestEntity,
-                    new ParameterizedTypeReference<Map<String, Object>>() {});
+            List<Map<String, String>> results = new ArrayList<>();
+            Elements items = doc.select(".result__body");
 
-            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
-                Map<String, Object> resBody = response.getBody();
-                if (Boolean.TRUE.equals(resBody.get("success"))) {
-                    Map<String, Object> data = (Map<String, Object>) resBody.get("data");
-                    if (data == null) {
-                        throw new BadRequestException("Échec de l'extraction : Champ 'data' manquant");
-                    }
-
-                    Map<String, Object> aiResponse = (Map<String, Object>) data.get("recipe");
-                    if (aiResponse == null || !"success".equals(aiResponse.get("status"))) {
-                        String msg = aiResponse != null ? (String) aiResponse.get("fallback_message") : "Erreur inconnue";
-                        throw new BadRequestException("Échec de l'extraction : " + msg);
-                    }
-
-                    Map<String, Object> recipeMap = (Map<String, Object>) aiResponse.get("recipe");
-                    if (recipeMap == null) {
-                        throw new BadRequestException("Échec de l'extraction : Données de recette manquantes");
-                    }
-
-                    // Enrich recipe with platform image if not present
-                    if (recipeMap.get("image") == null || ((String) recipeMap.get("image")).isEmpty()) {
-                        recipeMap.put("image", data.get("image"));
-                    }
-
-                    // Ensure origin and sourceUrl are set
-                    recipeMap.put("origin", "IMPORT");
-                    recipeMap.put("sourceUrl", url);
-
-                    return objectMapper.convertValue(recipeMap, CreateRecipeRequest.class);
+            for (Element item : items) {
+                if (results.size() >= 10) break;
+                Element a = item.selectFirst(".result__title a");
+                if (a != null) {
+                    Map<String, String> res = new HashMap<>();
+                    res.put("title", a.text());
+                    res.put("url", a.attr("href").startsWith("//") ? "https:" + a.attr("href") : a.attr("href"));
+                    Element snip = item.selectFirst(".result__snippet");
+                    res.put("snippet", snip != null ? snip.text() : "");
+                    results.add(res);
                 }
             }
-
-            throw new BadRequestException("Échec de l'extraction de la recette par l'IA.");
-
+            return results;
         } catch (Exception e) {
-            log.error("Erreur lors de l'extraction de la recette depuis le lien : {}", e.getMessage());
-            throw new BadRequestException("Impossible d'extraire la recette : " + e.getMessage());
+            log.error("Search failed: {}", e.getMessage());
+            return Collections.emptyList();
         }
-    }
-
-    @Override
-    public AiIngredientDetectionResponse detectIngredients(MultipartFile file, String email) {
-        // Not used anymore as per user request
-        return null;
-    }
-
-    private AiRecipeGenerationRequest.UserPreferencesPayload mapUserToPreferences(User user) {
-        return AiRecipeGenerationRequest.UserPreferencesPayload.builder()
-                .allergies(user.getAllergies())
-                .preferences(user.getDietaryPreferences())
-                .dislikes(user.getFoodDislikes())
-                .cuisines_love(user.getFavoriteCuisines())
-                .kitchen_tools(user.getKitchenAppliances())
-                .cooking_goals(user.getOnboardingGoals())
-                .DNA(user.getFlavorDna())
-                .skill_level(mapSkillLevel(user.getCookingSkill()))
-                .time_minutes(user.getCookingTimePreference())
-                .servings(null) // Not explicitly in User entity yet, or could be mapped if found
-                .build();
-    }
-
-    private String mapSkillLevel(String skill) {
-        if (skill == null) return "HomeCook";
-        String s = skill.toLowerCase();
-        if (s.contains("begin")) return "total_beginer";
-        if (s.contains("semi") || s.contains("advanced")) return "Advanced Semi Pro";
-        if (s.contains("confident")) return "ConfidentCook";
-        return "HomeCook";
-    }
-
-    @Override
-    public List<CreateRecipeRequest> generateRecipes(AiRecipeGenerationRequest request, String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new BadRequestException("User not found"));
-
-        try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
-
-            // Merge incoming request with user preferences if not provided
-            if (request.getUser_preferences() == null) {
-                request.setUser_preferences(mapUserToPreferences(user));
-            }
-
-            HttpEntity<AiRecipeGenerationRequest> requestEntity = new HttpEntity<>(request, headers);
-
-            ResponseEntity<com.cooked.backend.dto.response.ScanResponse> response = restTemplate.postForEntity(
-                    baseUrl + "/api/recipes/generate",
-                    requestEntity,
-                    com.cooked.backend.dto.response.ScanResponse.class);
-
-            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null && response.getBody().isSuccess()) {
-                List<CreateRecipeRequest> recipes = response.getBody().getRecipes();
-                if (recipes != null) {
-                    for (CreateRecipeRequest r : recipes) r.setOrigin("MANUAL");
-                }
-                return recipes;
-            }
-        } catch (Exception e) {
-            log.error("Error generating recipes via Node.js: {}", e.getMessage());
-        }
-        return legacyAiService.generateRecipes(request, email);
     }
 
     @Override
     public List<CreateRecipeRequest> generateInitialRecipes(User user, int count) {
         try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
+            List<com.cooked.backend.entity.RecipeData> pool = recipeDataRepository.findRandomRecipes(20);
+            List<String> poolNames = pool.stream().map(com.cooked.backend.entity.RecipeData::getName).toList();
 
-            // Get a pool of recipes from local data
-            List<com.cooked.backend.entity.RecipeData> rawPool = recipeDataRepository.findRandomRecipes(30);
-            List<String> namesPool = rawPool.stream()
-                    .map(com.cooked.backend.entity.RecipeData::getName)
-                    .collect(java.util.stream.Collectors.toList());
+            Map<String, Object> body = Map.of(
+                "recipe_pool", poolNames,
+                "user_preferences", Map.of(
+                    "allergies", user.getAllergies() != null ? user.getAllergies() : "",
+                    "preferences", user.getDietaryPreferences() != null ? user.getDietaryPreferences() : "",
+                    "cuisines", user.getFavoriteCuisines() != null ? user.getFavoriteCuisines() : ""
+                )
+            );
 
-            Map<String, Object> body = new java.util.HashMap<>();
-            body.put("ingredients", java.util.Collections.emptyList());
-            body.put("recipe_pool", namesPool); 
-            body.put("user_preferences", mapUserToPreferences(user));
-
-            HttpEntity<Map<String, Object>> requestEntity = new HttpEntity<>(body, headers);
-
-            ResponseEntity<com.cooked.backend.dto.response.ScanResponse> response = restTemplate.postForEntity(
-                    baseUrl + "/api/recipes/suggest",
-                    requestEntity,
-                    com.cooked.backend.dto.response.ScanResponse.class);
-
-            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null && response.getBody().isSuccess()) {
+            ResponseEntity<ScanResponse> response = restTemplate.postForEntity(baseUrl + "/api/recipes/suggest", body, ScanResponse.class);
+            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
                 List<CreateRecipeRequest> recipes = response.getBody().getRecipes();
-                if (recipes != null) {
-                    for (CreateRecipeRequest r : recipes) {
-                        r.setOrigin("ONBOARDING");
-                        // Link back the original image from the pool
-                        rawPool.stream()
-                            .filter(p -> p.getName().equalsIgnoreCase(r.getName()))
-                            .findFirst()
-                            .ifPresent(p -> r.setImage(p.getImageUrl()));
-                    }
+                for (CreateRecipeRequest r : recipes) {
+                    pool.stream().filter(p -> p.getName().equalsIgnoreCase(r.getName()))
+                        .findFirst().ifPresent(p -> r.setImage(p.getImageUrl()));
+                    r.setOrigin("ONBOARDING");
                 }
                 return recipes;
             }
         } catch (Exception e) {
-            log.error("Error generating initial recipes via Node.js with pool: {}", e.getMessage());
+            log.error("Initial suggestions failed: {}", e.getMessage());
         }
-        return legacyAiService.generateInitialRecipes(user, count);
-    }
-
-    @Override
-    public com.cooked.backend.dto.response.ScanResponse scan(MultipartFile file, String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new BadRequestException("User not found"));
-
-        try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.MULTIPART_FORM_DATA);
-
-            MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
-
-            // Image part
-            ByteArrayResource imageResource = new ByteArrayResource(file.getBytes()) {
-                @Override
-                public String getFilename() {
-                    return file.getOriginalFilename();
-                }
-            };
-            body.add("image", imageResource);
-
-            // User preferences part (JSON-stringified)
-            AiRecipeGenerationRequest.UserPreferencesPayload prefs = mapUserToPreferences(user);
-            body.add("user_preferences", objectMapper.writeValueAsString(prefs));
-            
-            String customInstructions = "Format the recipe with: " +
-                "1. 'ingredients': list of ingredients. " +
-                "2. 'equipment': list of ALL kitchen tools/equipment. " +
-                "3. 'steps': list of steps. " +
-                "Example format: {\"name\": \"...\", \"ingredients\": [...], \"equipment\": [\"pan\", \"pot\"], \"steps\": [\"Step 1: ...\"]}";
-            body.add("custom_instructions", customInstructions);
-
-            HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
-
-            ResponseEntity<com.cooked.backend.dto.response.ScanResponse> response = restTemplate.postForEntity(
-                    baseUrl + "/api/analyze",
-                    requestEntity,
-                    com.cooked.backend.dto.response.ScanResponse.class);
-
-            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null && response.getBody().isSuccess()) {
-                com.cooked.backend.dto.response.ScanResponse scanRes = response.getBody();
-                if (scanRes != null && scanRes.getRecipes() != null) {
-                    for (CreateRecipeRequest r : scanRes.getRecipes()) {
-                        r.setOrigin("SCAN");
-                    }
-                }
-                return scanRes;
-            }
-
-            throw new BadRequestException("Failed to analyze image/recipes from AI.");
-
-        } catch (IOException e) {
-            throw new BadRequestException("Could not process image: " + e.getMessage());
-        }
-    }
-
-    @Override
-    public com.cooked.backend.dto.response.ScanResponse scanTyped(List<String> ingredients, String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new BadRequestException("User not found"));
-
-        try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
-
-            Map<String, Object> body = new java.util.HashMap<>();
-            body.put("ingredients", ingredients);
-
-            AiRecipeGenerationRequest.UserPreferencesPayload prefs = mapUserToPreferences(user);
-            body.put("user_preferences", prefs);
-            
-            String customInstructions = "Format the recipe with: " +
-                "1. 'ingredients': list of ingredients. " +
-                "2. 'equipment': list of ALL kitchen tools/equipment. " +
-                "3. 'steps': list of steps. " +
-                "Example format: {\"name\": \"...\", \"ingredients\": [...], \"equipment\": [\"pan\", \"pot\"], \"steps\": [\"Step 1: ...\"]}";
-            body.put("custom_instructions", customInstructions);
-
-            HttpEntity<Map<String, Object>> requestEntity = new HttpEntity<>(body, headers);
-
-            ResponseEntity<com.cooked.backend.dto.response.ScanResponse> response = restTemplate.postForEntity(
-                    baseUrl + "/api/recipes/generate",
-                    requestEntity,
-                    com.cooked.backend.dto.response.ScanResponse.class);
-
-            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null && response.getBody().isSuccess()) {
-                com.cooked.backend.dto.response.ScanResponse scanRes = response.getBody();
-                if (scanRes != null && scanRes.getRecipes() != null) {
-                    for (CreateRecipeRequest r : scanRes.getRecipes()) {
-                        r.setOrigin("SCAN");
-                    }
-                }
-                return scanRes;
-            }
-
-            throw new BadRequestException("Failed to analyze ingredients/recipes from AI.");
-
-        } catch (Exception e) {
-            throw new BadRequestException("Could not process typed analyze: " + e.getMessage());
-        }
-    }
-
-    @Override
-    public List<Map<String, String>> searchWeb(String query) {
-        try {
-            String url = baseUrl + "/api/search?q=" + query;
-            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
-                    url,
-                    HttpMethod.GET,
-                    null,
-                    new ParameterizedTypeReference<Map<String, Object>>() {});
-
-            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
-                Map<String, Object> body = response.getBody();
-                if (Boolean.TRUE.equals(body.get("success"))) {
-                    return (List<Map<String, String>>) body.get("data");
-                }
-            }
-        } catch (Exception e) {
-            log.error("Erreur lors de la recherche web : {}", e.getMessage());
-        }
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
     public List<String> generateTrendingDishes() {
         try {
-            String url = baseUrl + "/api/recipes/trending";
-            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
-                    url,
-                    HttpMethod.GET,
-                    null,
-                    new ParameterizedTypeReference<Map<String, Object>>() {});
-
+            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(baseUrl + "/api/recipes/trending", HttpMethod.GET, null, new ParameterizedTypeReference<Map<String, Object>>() {});
             if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
-                Map<String, Object> body = response.getBody();
-                if (Boolean.TRUE.equals(body.get("success"))) {
-                    return (List<String>) body.get("trending");
-                }
+                return (List<String>) response.getBody().get("trending");
             }
         } catch (Exception e) {
-            log.error("Erreur lors de la génération des tendances : {}", e.getMessage());
+            log.warn("Trending call failed, using defaults");
         }
-        return legacyAiService.generateTrendingDishes();
+        return List.of("Tacos au poulet", "Pasta Carbonara", "Salade César", "Sushi Roll");
+    }
+
+    @Override
+    public CreateRecipeRequest extractRecipeFromLink(String url, String email) {
+        try {
+            Map<String, String> body = Map.of("url", url);
+            ResponseEntity<Map<String, Object>> response = restTemplate.postForEntity(baseUrl + "/api/extract", body, (Class<Map<String, Object>>)(Class<?>)Map.class);
+            
+            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
+                Map<String, Object> data = (Map<String, Object>) response.getBody().get("data");
+                Map<String, Object> recipe = (Map<String, Object>) ((Map<String, Object>) data.get("recipe")).get("recipe");
+                recipe.put("origin", "IMPORT");
+                recipe.put("sourceUrl", url);
+                return objectMapper.convertValue(recipe, CreateRecipeRequest.class);
+            }
+        } catch (Exception e) {
+            log.error("Extraction failed: {}", e.getMessage());
+        }
+        throw new BadRequestException("Échec de l'extraction");
+    }
+
+    @Override
+    public List<CreateRecipeRequest> generateRecipes(AiRecipeGenerationRequest request, String email) {
+        try {
+            ResponseEntity<ScanResponse> response = restTemplate.postForEntity(baseUrl + "/api/recipes/generate", request, ScanResponse.class);
+            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
+                List<CreateRecipeRequest> recipes = response.getBody().getRecipes();
+                for (CreateRecipeRequest r : recipes) r.setOrigin("MANUAL");
+                return recipes;
+            }
+        } catch (Exception e) {
+            log.error("Generation failed: {}", e.getMessage());
+        }
+        return Collections.emptyList();
+    }
+
+    @Override
+    public ScanResponse scan(MultipartFile file, String email) {
+        throw new UnsupportedOperationException("Utilisez scanTyped.");
+    }
+
+    @Override
+    public ScanResponse scanTyped(List<String> ingredients, String email) {
+        Map<String, Object> body = Map.of("ingredients", ingredients);
+        ResponseEntity<ScanResponse> response = restTemplate.postForEntity(baseUrl + "/api/recipes/generate", body, ScanResponse.class);
+        ScanResponse res = response.getBody();
+        if (res != null && res.getRecipes() != null) {
+            for (CreateRecipeRequest r : res.getRecipes()) r.setOrigin("SCAN");
+        }
+        return res;
+    }
+
+    @Override
+    public AiIngredientDetectionResponse detectIngredients(MultipartFile file, String email) {
+        throw new UnsupportedOperationException("Non supporté.");
     }
 }
